--- a/source (react)/package.json
+++ b/source (react)/package.json
@@ -13,6 +13,8 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.1",
     "styled-components": "^4.4.1",
     "web-vitals": "^0.2.4"
   },
@@ -39,5 +41,7 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {}
+  "devDependencies": {},
+  "proxy": "http://127.0.0.1:5000"
+
 }
