--- a/source (react)/package.json
+++ b/source (react)/package.json
@@ -6,7 +6,6 @@
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.5",
-    "@testing-library/react": "^11.1.2",
     "@testing-library/user-event": "^12.2.2",
     "bootstrap": "^4.5.3",
     "react": "^17.0.1",
@@ -41,7 +40,8 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@testing-library/react": "^11.2.2"
+  },
   "proxy": "http://127.0.0.1:5000"
-
 }
